--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pandoculation = { git = "https://github.com/davidRoussov/pandoculation.git" }
 log = "0.4"
 simple-logging = "2.0.2"
 reqwest = { version = "0.11", features = ["json"] }
