--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ clap = "3.0.0-beta.5"
 regex= "1.10.3"
 fancy-regex = "0.13.0"
 html-escape = "0.2.13"
-minify-html = "0.15.0"
+html-minifier = "5.0.0"
 
 [lib]
 name = "parversion"
