--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ regex= "1.10.3"
 fancy-regex = "0.13.0"
 html-escape = "0.2.13"
 html-minifier = "5.0.0"
+sha2 = "0.10.8"
 
 [lib]
 name = "parversion"
