--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ fancy-regex = "0.13.0"
 html-escape = "0.2.13"
 html-minifier = "5.0.0"
 sha2 = "0.10.8"
+sxd-xpath = "0.4.2"
 
 [lib]
 name = "parversion"
