--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ html-escape = "0.2.13"
 html-minifier = "5.0.0"
 sha2 = "0.10.8"
 sxd-xpath = "0.4.2"
+xml-rs = "0.8.20"
 
 [lib]
 name = "parversion"
