--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ sha2 = "0.10.8"
 sxd-xpath = "0.4.2"
 xmltree = "0.10.3"
 xml-rs = "0.8.20"
+html5ever = "0.27.0"
+markup5ever_rcdom = "0.3.0"
 
 [lib]
 name = "parversion"
