--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ xmltree = "0.10.3"
 xml-rs = "0.8.20"
 html5ever = "0.27.0"
 markup5ever_rcdom = "0.3.0"
+ammonia = "4.0.0"
+maplit = "1.0.2"
 
 [lib]
 name = "parversion"
