--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,9 @@ xml-rs = "0.8.20"
 html5ever = "0.27.0"
 markup5ever_rcdom = "0.3.0"
 ammonia = "4.0.0"
-maplit = "1.0.2"
 async-recursion = "1.1.0"
+sled = "0.34.7"
+bincode = "1.3.3"
 
 [lib]
 name = "parversion"
