--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ markup5ever_rcdom = "0.3.0"
 async-recursion = "1.1.0"
 sled = "0.34.7"
 bincode = "1.3.3"
+roxmltree = "0.19.0"
+xpath_reader = "0.5.3"
 
 [lib]
 name = "parversion"
