--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ sled = "0.34.7"
 bincode = "1.3.3"
 roxmltree = "0.19.0"
 xpath_reader = "0.5.3"
+uuid = {version = "1.8.0", features = ["v4"]}
 
 [lib]
 name = "parversion"
