--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,12 @@ xmltree = "0.10.3"
 xml-rs = "0.8.20"
 html5ever = "0.27.0"
 markup5ever_rcdom = "0.3.0"
-async-recursion = "1.1.0"
 sled = "0.34.7"
 bincode = "1.3.3"
 roxmltree = "0.19.0"
 xpath_reader = "0.5.3"
 uuid = {version = "1.8.0", features = ["v4"]}
+env_logger = "0.11.3"
 
 [lib]
 name = "parversion"
