--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ log = "0.4"
 simple-logging = "2.0.2"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
-serde = {version = "1.0", features = ["derive"]}
+serde = {version = "1.0", features = ["derive", "rc"]}
 serde_json = "1.0"
 atty = "0.2"
 clap = "3.0.0-beta.5"
