--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bincode = "1.3.3"
 roxmltree = "0.19.0"
 uuid = {version = "1.8.0", features = ["v4"]}
 env_logger = "0.11.3"
+dot = "0.1.4"
 
 [lib]
 name = "parversion"
