--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,6 @@ fancy-regex = "0.13.0"
 sha2 = "0.10.8"
 xmltree = "0.10.3"
 xml-rs = "0.8.20"
-html5ever = "0.27.0"
-markup5ever_rcdom = "0.3.0"
 sled = "0.34.7"
 bincode = "1.3.3"
 roxmltree = "0.19.0"
@@ -29,6 +27,9 @@ dot = "0.1.4"
 pathetic = "0.3.0"
 url = "2.5.2"
 scraper = "0.19.0"
+markup5ever = "0.12.1"
+markup5ever_rcdom = "0.3.0"
+html5ever = "0.27.0"
 
 [lib]
 name = "parversion"
