--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ scraper = "0.19.0"
 markup5ever = "0.12.1"
 markup5ever_rcdom = "0.3.0"
 html5ever = "0.27.0"
+toml = "0.8.14"
+lazy_static = "1.5.0"
 
 [lib]
 name = "parversion"
