--- a/settings.toml
+++ b/settings.toml
@@ -1,3 +1,7 @@
 [llm]
 target_node_adjacent_xml_length = 2000
 target_node_examples_max_count = 5
+
+[llm.data_structure_interpretation]
+target_node_adjacent_xml_length = 3000
+target_node_examples_max_count = 10
