--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ markup5ever_rcdom = "0.3.0"
 html5ever = "0.27.0"
 toml = "0.8.14"
 lazy_static = "1.5.0"
+futures = "0.3.30"
 
 [lib]
 name = "parversion"
