add setting for enabling recursive interpretation

--- a/settings.toml
+++ b/settings.toml
@@ -3,5 +3,6 @@ target_node_adjacent_xml_length = 2000
 target_node_examples_max_count = 5
 
 [llm.data_structure_interpretation]
+enabled = false
 target_node_adjacent_xml_length = 3000
 target_node_examples_max_count = 10
