--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,11 @@ toml = "0.8.14"
 lazy_static = "1.5.0"
 futures = "0.3.30"
 dotenv = "0.15.0"
+napi = "3.0.0-alpha.21"
+napi-derive = "3.0.0-alpha.20"
+
+[build-dependencies]
+napi-build = "1"
 
 [lib]
 name = "parversion"
