--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ xmltree = "0.10.3"
 sled = "0.34.7"
 bincode = "1.3.3"
 uuid = {version = "1.8.0", features = ["v4"]}
-env_logger = "0.11.3"
 dot = "0.1.4"
 pathetic = "0.3.0"
 url = "2.5.2"
@@ -30,6 +29,7 @@ toml = "0.8.14"
 lazy_static = "1.5.0"
 futures = "0.3.30"
 dotenv = "0.15.0"
+fern = "0.7.0"
 
 [lib]
 name = "parversion"
