fix compilation errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,13 @@ lazy_static = "1.5.0"
 futures = "0.3.30"
 dotenv = "0.15.0"
 fern = "0.7.0"
+pyo3 = { version = "0.17", features = ["extension-module"] }
 
 [lib]
 name = "parversion"
 path = "src/lib.rs"
+crate-type = ["cdylib"]
+
+[[bin]]
+name = "parversion"
+path = "src/main.rs"
