fix provider, add test provider

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ futures = "0.3.30"
 dotenv = "0.15.0"
 fern = "0.7.0"
 pyo3 = { version = "0.17", features = ["extension-module"] }
+async-trait = "0.1.83"
 
 [lib]
 name = "parversion"
