--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ dotenv = "0.15.0"
 fern = "0.7.0"
 pyo3 = { version = "0.17", features = ["extension-module"] }
 async-trait = "0.1.83"
+quick-js = "0.4.1"
 
 [lib]
 name = "parversion"
