fix compiler errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ fern = "0.7.0"
 pyo3 = { version = "0.17", features = ["extension-module"] }
 async-trait = "0.1.83"
 quick-js = "0.4.1"
+rusqlite = "0.32.1"
+serde_yaml = "0.9.34"
 
 [lib]
 name = "parversion"
