--- a/provider.yaml
+++ b/provider.yaml
@@ -3,11 +3,12 @@ document_profiles:
     description: "HN Frontpage"
     features: []
     transformations:
-      - id: "8d5aa1ed-de34-4bd1-afc3-9740ced4e512"
-        description: "XML element transformation during document preprocessing. Blacklisted elements and attributes are eliminated, unseen by the LLM, reducing token count for inference."
-        runtime: "QuickJS"
-        infix: |
-          const BLACKLISTED_ELEMENTS = {script:1,meta:1,link:1,iframe:1,svg:1,style:1,noscript:1};
-          if (BLACKLISTED_ELEMENTS[element]) element = null;
-          attributes = Object.keys(attributes).filter(item => item === 'href' || item = 'title');
+      - DocumentTransformation:
+          id: "8d5aa1ed-de34-4bd1-afc3-9740ced4e512"
+          description: "XML element transformation during document preprocessing. Blacklisted elements and attributes are eliminated, unseen by the LLM, reducing token count for inference."
+          runtime: "QuickJS"
+          infix: |
+            const BLACKLISTED_ELEMENTS = {script:1,meta:1,link:1,iframe:1,svg:1,style:1,noscript:1};
+            if (BLACKLISTED_ELEMENTS[element]) element = null;
+            attributes = Object.keys(attributes).filter(item => item === 'href' || item = 'title');
 
