--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ async-trait = "0.1.83"
 quick-js = "0.4.1"
 rusqlite = "0.32.1"
 serde_yaml = "0.9.34"
+fantoccini = "0.21.3"
 
 [lib]
 name = "parversion"
