--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ async-trait = "0.1.83"
 quick-js = "0.4.1"
 serde_yaml = "0.9.34"
 fantoccini = "0.21.3"
+once_cell = "1.20.2"
 
 [lib]
 name = "parversion"
