--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ quick-js = "0.4.1"
 serde_yaml = "0.9.34"
 fantoccini = "0.21.3"
 once_cell = "1.20.2"
+hex = "0.4.3"
 
 [lib]
 name = "parversion"
