--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ clap = "3.0.0-beta.5"
 regex= "1.10.3"
 sha2 = "0.10.8"
 xmltree = "0.10.3"
-sled = "0.34.7"
+sled = { version = "0.34.7", optional = true }
 bincode = "1.3.3"
 uuid = {version = "1.8.0", features = ["v4"]}
 dot = "0.1.4"
@@ -33,7 +33,7 @@ async-trait = "0.1.83"
 quick-js = "0.4.1"
 serde_yaml = "0.9.34"
 fantoccini = "0.21.3"
-once_cell = "1.20.2"
+once_cell = { version = "1.20.2", optional = true }
 hex = "0.4.3"
 chrono = "0.4.41"
 
@@ -44,3 +44,7 @@ path = "src/lib.rs"
 [[bin]]
 name = "parversion"
 path = "src/main.rs"
+
+[features]
+default = []
+caching = ["dep:sled", "dep:once_cell"]
