--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ once_cell = { version = "1.20.2", optional = true }
 hex = "0.4.3"
 chrono = "0.4.41"
 cfg-if = "1.0.4"
+dirs = "6.0.0"
 
 [lib]
 name = "parversion"
