--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ chrono = "0.4.41"
 cfg-if = "1.0.4"
 dirs = "6.0.0"
 rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
+swc_common = "18.0.0"
+swc_ecma_parser = "28.0.0"
+swc_ecma_ast = "19.0.0"
 
 [lib]
 name = "parversion"
