--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,9 @@ rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
 swc_common = "18.0.0"
 swc_ecma_parser = "28.0.0"
 swc_ecma_ast = "19.0.0"
+swc_ecma_visit = "19.0.0"
+swc_ecma_codegen = "21.0.0"
+swc_atoms = "9.0.0"
 
 [lib]
 name = "parversion"
