--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+curl = { version = "0.4", features = ["static-curl"] }
 log = "0.4"
 simple-logging = "2.0.2"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
