--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,12 +40,12 @@ chrono = { version = "0.4.41", features = ["serde"]}
 cfg-if = "1.0.4"
 dirs = "6.0.0"
 rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
-swc_common = "18.0.0"
-swc_ecma_parser = "28.0.0"
-swc_ecma_ast = "19.0.0"
-swc_ecma_visit = "19.0.0"
-swc_ecma_codegen = "21.0.0"
-swc_atoms = "9.0.0"
+swc_common = "=18.0.0"
+swc_ecma_parser = "=28.0.0"
+swc_ecma_ast = "=19.0.0"
+swc_ecma_visit = "=19.0.0"
+swc_ecma_codegen = "=21.0.0"
+swc_atoms = "=9.0.0"
 openrouter-rs = "0.4.7"
 
 [lib]
