thread safe html parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ uuid = {version = "1.8.0", features = ["v4"]}
 dot = "0.1.4"
 pathetic = "0.3.0"
 url = "2.5.2"
-markup5ever = "0.12.1"
-markup5ever_rcdom = "0.3.0"
-html5ever = "0.27.0"
+markup5ever = "^0.11"
+markup5ever_arcdom = "0.1.2"
+html5ever = "^0.26"
 toml = "0.8.14"
 lazy_static = "1.5.0"
 futures = "0.3.30"
