--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,8 @@ uuid = {version = "1.8.0", features = ["v4"]}
 dot = "0.1.4"
 pathetic = "0.3.0"
 url = "2.5.2"
-markup5ever = "^0.11"
-markup5ever_arcdom = "0.1.2"
-html5ever = "^0.26"
+scraper = "0.22"
+ego-tree = "0.10"
 toml = "0.8.14"
 lazy_static = "1.5.0"
 futures = "0.3.30"
@@ -40,7 +39,7 @@ chrono = { version = "0.4.41", features = ["serde"]}
 cfg-if = "1.0.4"
 dirs = "6.0.0"
 rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
-swc_common = "=18.0.0"
+swc_common = { version = "=18.0.0", features = ["concurrent"] }
 swc_ecma_parser = "=28.0.0"
 swc_ecma_ast = "=19.0.0"
 swc_ecma_visit = "=19.0.0"
